[RPS-433] Fix for expanding / collapsing lists

--- a/repository-data/webfiles/src/main/resources/site/scss/components/_filter.scss
+++ b/repository-data/webfiles/src/main/resources/site/scss/components/_filter.scss
@@ -113,6 +113,9 @@
             padding-right: 0;
         }
 
+        &.is-hidden {
+           display: none;
+        }
     }
 
     .filter-list__controller a {
